src/objects/COPE_Data__c.object
<CustomObject>
    <fields>
        <fullName>COPECountPerSeat_12__c</fullName>
        <label>COPECountPerSeat_12</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountPerSeat_1__c</fullName>
        <label>COPECountPerSeat_1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountPerSeat_2__c</fullName>
        <label>COPECountPerSeat_2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountPerSeat__c</fullName>
        <label>COPECountPerSeat</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountTenPlusPerSeat_12__c</fullName>
        <label>COPECountTenPlusPerSeat_12</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountTenPlusPerSeat_1__c</fullName>
        <label>COPECountTenPlusPerSeat_1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountTenPlusPerSeat_2__c</fullName>
        <label>COPECountTenPlusPerSeat_2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPECountTenPlusPerSeat__c</fullName>
        <label>COPECountTenPlusPerSeat</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEIncreaseCountPerSeat__c</fullName>
        <label>COPEIncreaseCountPerSeat</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEIncreaseTotalPerSeat__c</fullName>
        <label>COPEIncreaseTotalPerSeat</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercentTen_12__c</fullName>
        <label>COPEPercentTen_12</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercentTen_1__c</fullName>
        <label>COPEPercentTen_1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercentTen_2__c</fullName>
        <label>COPEPercentTen_2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercentTen__c</fullName>
        <label>COPEPercentTen</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercent_12__c</fullName>
        <label>COPEPercent_12</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercent_1__c</fullName>
        <label>COPEPercent_1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercent_2__c</fullName>
        <label>COPEPercent_2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPEPercent__c</fullName>
        <label>COPEPercent</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPETotalPerSeat_12__c</fullName>
        <label>COPETotalPerSeat_12</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPETotalPerSeat_1__c</fullName>
        <label>COPETotalPerSeat_1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPETotalPerSeat_2__c</fullName>
        <label>COPETotalPerSeat_2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPETotalPerSeat__c</fullName>
        <label>COPETotalPerSeat</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell1Class__c</fullName>
        <label>Cell1Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitteeMbrFirstName__c</fullName>
        <label>CommitteeMbrFirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitteeMbrLastName__c</fullName>
        <label>CommitteeMbrLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitteeMbrName__c</fullName>
        <label>CommitteeMbrName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordName__c</fullName>
        <label>CoordName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordinatorFirstName__c</fullName>
        <label>CoordinatorFirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordinatorLastName__c</fullName>
        <label>CoordinatorLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <description>Month name + Year</description>
        <label>Current Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EboardNames__c</fullName>
        <label>EboardNames</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmpCountPerSeat_12__c</fullName>
        <label>EmpCountPerSeat_12</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmpCountPerSeat_1__c</fullName>
        <label>EmpCountPerSeat_1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmpCountPerSeat_2__c</fullName>
        <label>EmpCountPerSeat_2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmpCountPerSeat__c</fullName>
        <label>EmpCountPerSeat</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployerId__c</fullName>
        <label>EmployerId</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldRepFirstName__c</fullName>
        <label>FieldRepFirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldRepLastName__c</fullName>
        <label>FieldRepLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCOPECount__c</fullName>
        <label>NewCOPECount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewCOPETotal__c</fullName>
        <label>NewCOPETotal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputColumn1__c</fullName>
        <label>OutputColumn1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeatID__c</fullName>
        <label>SeatID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeatName__c</fullName>
        <label>SeatName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Row_Id__c</fullName>
        <label>Table Row Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UWG__c</fullName>
        <description>Union Wide Goal (from Calvin: COPETotalPerSeat / ((EmpCountPerSeat*0.33) *10) )</description>
        <label>UWG</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>eBoardFirstName__c</fullName>
        <label>eBoardFirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBoardLastName__c</fullName>
        <label>eBoardLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rowId__c</fullName>
        <label>rowId</label>
        <type>AutoNumber</type>
    </fields>
    <label>COPE Data</label>
    <nameField>
        <label>COPE Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COPE Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>